--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.20",
     "multer": "^1.4.2",
