--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd ./config/dev.env nodemon src/index.js",
-    "test": "jest --watch"
+    "test": "env-cmd ./config/test.env jest --watch"
+  },
+  "jest": {
+    "testenvironment": "node"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +24,7 @@
     "mongoose": "^5.9.20",
     "multer": "^1.4.2",
     "sharp": "^0.25.4",
+    "supertest": "^4.0.2",
     "validator": "^13.1.1"
   },
   "devDependencies": {
