--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "env-cmd ./config/test.env jest --watchAll"
   },
   "jest": {
-    "testenvironment": "node"
+    "testEnvironment": "node"
   },
   "keywords": [],
   "author": "",
